--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="open_drawer">Open navigation</string>
     <string name="close_drawer">Close navigation</string>
+    <string name="selected_image">Selected image</string>
+    <string name="remove_image">remove image</string>
 
 </resources>
