Edited All User fragment so offline or online usrs can refresh as many times they want but toasts are controlled to prevent spamming, same for gallery fragment

--- a/app/src/main/res/values-af/strings.xml
+++ b/app/src/main/res/values-af/strings.xml
@@ -22,5 +22,8 @@
     <string name="type_emergency_relief_fundraising_event">Noodhulpfonds-insameling</string>
 
 
+    <!--    Displaying min for View Event cards-->
+    <string name="minutes_short">min</string>
+
 
 </resources>
