--- a/app/src/main/res/values-zu/strings.xml
+++ b/app/src/main/res/values-zu/strings.xml
@@ -22,5 +22,8 @@
     <string name="type_emergency_relief_fundraising_event">Umcimbi Wokuqongelela Imali Wokusiza Ngokuphuthumayo</string>
 
 
+<!--    Displaying min for View Event cards-->
+    <string name="minutes_short">min</string>
+
 
 </resources>
