Past Events page has View Image button that shows filtered gallery fragment for that image only

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,5 +35,7 @@
 
     <!--    Displaying min for View Event cards-->
     <string name="minutes_short">imiphumela</string>
+    <string name="open_gallery">Open Gallery</string>
+    <string name="action_gallery_label">All Past Images</string>
 
 </resources>
