--- a/app/src/main/res/values-zu/strings.xml
+++ b/app/src/main/res/values-zu/strings.xml
@@ -24,6 +24,8 @@
 
 <!--    Displaying min for View Event cards-->
     <string name="minutes_short">min</string>
+    <string name="open_gallery">Open Gallery</string>
+    <string name="action_gallery_label">All Past Images</string>
 
 
 </resources>
