--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,26 @@
     <string name="open_gallery">Open Gallery</string>
     <string name="action_gallery_label">All Past Images</string>
 
+
+    <string name="tab_upcoming_events">Upcoming Events</string>
+    <string name="tab_past_events">Past Events</string>
+
+    <!-- Optional: You can also move other texts from AllUsersFragment -->
+    <string name="header_upcoming_title">View our upcoming events</string>
+    <string name="header_upcoming_desc">Here are events scheduled soon. Tap a card to see details.</string>
+    <string name="header_past_title">Below are our past events</string>
+    <string name="header_past_desc">Tap \'View images\' on an event to see images for that event, or open the full gallery below.</string>
+    <string name="view_all_past_images">View our Past Events Gallery</string>
+    <string name="images_header">Event Images Below</string>
+    <string name="no_images_available">No images available to view</string>
+    <string name="view_images">View Event images</string>
+    <string name="gallery_title">IC Norath Gallery</string>
+    <string name="no_internet_connection">No internet connection</string>
+    <string name="no_images_available_for_this_event">No images available for this event</string>
+    <string name="no_gallery_images_found">No gallery images found</string>
+    <string name="failed_loading_images_for_event">Failed loading images for event</string>
+    <string name="server_query_failed_fallback">Server query failed. Falling back to client-side fetch.</string>
+    <string name="return_only">Return</string>
+
+
 </resources>
