--- a/app/src/main/res/values-zu/strings.xml
+++ b/app/src/main/res/values-zu/strings.xml
@@ -46,5 +46,14 @@
     <string name="server_query_failed_fallback">Ukubuza kuseva kwehlulekile. Kubuyela ekutholeni kwicala leklayenti.</string>
     <string name="return_only">Buyela ekhasini lezehlakalo</string>
 
+<!--    New Event Types-->
+    <string name="type_food_drives_and_community_kitchen">Ukudla Nokupheka Komphakathi</string>
+    <string name="type_fundraising_event">Umcimbi Wokukhupha Izimali</string>
+    <string name="type_educational_workshops">Izifundo Zemfundo</string>
+    <string name="type_awareness_campaigns">Imikhankaso Yokwazisa / Izesemina</string>
+    <string name="type_emergency_relief_distribution">Ukusatshalaliswa Kosizo Lwezimo Eziphuthumayo / Impendulo Kuzinhlekelele</string>
+    <string name="school_outreach">Uhlelo Lokufinyelela Ezikoleni</string>
+    <string name="read_more">Thepha ukuze ufunde okwengeziwe</string>
+
 
 </resources>
