Placed tab layout at the bottom and added a third tab, this way admins or volunteers can use the third tab to see event dashboard

--- a/app/src/main/res/values-af/strings.xml
+++ b/app/src/main/res/values-af/strings.xml
@@ -54,6 +54,7 @@
     <string name="type_emergency_relief_distribution">Noodhulpverspreiding / Rampreaksie</string>
     <string name="school_outreach">Skooluitreikprogram</string>
     <string name="read_more">Tik om meer te lees</string>
+    <string name="tab_hello">Third Page</string>
 
 
 </resources>
