--- a/app/src/main/res/values-zu/strings.xml
+++ b/app/src/main/res/values-zu/strings.xml
@@ -54,6 +54,7 @@
     <string name="type_emergency_relief_distribution">Ukusatshalaliswa Kosizo Lwezimo Eziphuthumayo / Impendulo Kuzinhlekelele</string>
     <string name="school_outreach">Uhlelo Lokufinyelela Ezikoleni</string>
     <string name="read_more">Thepha ukuze ufunde okwengeziwe</string>
+    <string name="tab_hello">Third Page</string>
 
 
 </resources>
